# ProyekFinalPBO

./: CMakeLists.txt  main.cpp
models/: Laptop.cpp  Laptop.h  LaptopGaming.cpp  LaptopGaming.h  ManajerKatalog.cpp  ManajerKatalog.h  PerangkatKeras.h  SpekCPU.cpp  SpekCPU.h  SpekDisplay.cpp  SpekDisplay.h  SpekPenyimpanan.cpp  SpekPenyimpanan.h  SpekRAM.cpp  SpekRAM.h
views/: AdminPage.cpp  AdminPage.h  CatalogPage.cpp  CatalogPage.h  CompareDialog.cpp  CompareDialog.h  DetailDialog.cpp  DetailDialog.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  StockDialog.cpp  StockDialog.h
